# ingester3

./: README.md  Untitled.ipynb  main.py  pyproject.toml  scratch1.ipynb  scratch_ged.py  test_log.py  tests.py
.github/workflows/: python-publish.yml
ViewsPandas/: Country.py  DBWriter.py  Priogrid.py  ViewsMonth.py  config.py  extensions.py  log.py  s1.py  s2.py  scratch.py
ViewsPandas/inner_local_2/: cache.db
ViewsPandas/local/: cache.db
ViewsPandas/local2/: cache.db
examples/: Untitled.ipynb  main.py  scratch_ged.py  test_log.py  tests.py
ingester3/: Country.py  DBWriter.py  FuzzyCountry.py  Priogrid.py  ViewsMonth.py  config.py  extensions.py  log.py  scratch.py  timestamp.cache
sql_triggers/: README.MD  expand_db_global.sql  triggers.sql
tests/: tests.py  tests2.py  tests3.py  tests4.py  tests5.py
