[tool.poetry]
name = "ingester3"
version = "0.3.4"
description = "Data ingester for ViEWS3."
authors = ["Mihai Croicu <mihai.croicu@pcr.uu.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UppsalaConflictDataProgram/ingester3:>"



[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
sqlalchemy = "^1.3"
psycopg2 = "^2.8.1"
diskcache = "^5.0.0"
numpy = "^1.20"
python-dotenv = "^0.18"
cryptography = "^3.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
