[tool.poetry]
name = "ingester3"
version = "2.1.1"
description = "Data ingester for ViEWS3."
authors = ["Mihai Croicu <mihai.croicu@pcr.uu.se>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UppsalaConflictDataProgram/ingester3>"

[tool.poetry.dependencies]
python = "^3.9"
pandas = ">1.2.3"
sqlalchemy = "^1.3"
psycopg2-binary = "^2.8"
diskcache = "^5.0.0"
numpy = ">1.24"
python-dotenv = "^0.18"
cryptography = ">36.0"
levenshtein = "^0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
